# pyferret

./: .coveragerc  .env  .gitignore  .markdownlint.jsonc  README.md  pyproject.toml
.github/workflows/: checks.yml  cov_report.yml
src/: __init__.py  abstract.py  maybe.py  result.py
src/pyferret/: __init__.py  abstract.py  helpers.py  maybe.py  result.py
src/pyfunc/: __init__.py  abstract.py  maybe.py  result.py
tests/: test_helpers.py  test_maybe.py  test_result.py
