[tool.poetry]
name = "pyfunc"
version = "0.1.0"
description = "Functional programming tools for Python"
authors = ["archds <dsalekseev11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.277"
pyright = "^1.1.316"
black = "^23.3.0"
isort = "^5.12.0"
autoflake = "^2.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = [
  "--tb=short",
#   "--cov=result",
#   "--cov=tests",
#   "--cov-report=term",
#   "--cov-report=xml",
]
testpaths = [
  "tests",
]
pythonpath = [
  "src"
]