[tool.poetry]
authors = ["archds <dsalekseev11@gmail.com>"]
description = "Functional programming tools for Python"
name = "pyfunc"
readme = "README.md"
version = "0.1.0"

packages = [
  {include = "pyfunc", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.0"
black = "^23.3.0"
isort = "^5.12.0"
pyright = "^1.1.316"
ruff = "^0.0.277"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pytest.ini_options]
addopts = [
  "--tb=short",
]
pythonpath = [
  "src/pyfunc",
]
testpaths = [
  "tests",
]
